# mgl-imgui-framework

./: README.md  flake.nix  pyproject.toml
src/mgl_imgui_framework/: __main__.py  app.py  dockspace.py  hierachical_menu_item.py  menu_item.py  render_target.py  window.py
src/mgl_imgui_framework/examples/: app.py  dockspace_builder.py  main.py
src/mgl_imgui_framework/examples/counter/: counter.py
src/mgl_imgui_framework/examples/demo/: imgui_demo.py
src/mgl_imgui_framework/examples/multiprocessing/: mp_window.py
src/mgl_imgui_framework/render_targets/: menu_item.py  window.py
src/mgl_imgui_framework/utils/: fps_counter.py  hierachical_menu_item.py
