[project]
name = "mgl-imgui-framework"
version = "0.1.0"
description = "A generalized python moderngl and imgui framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moderngl>=5.12.0",
    "moderngl-window[imgui]>=3.1.1",
    "imgui-bundle<=1.6.3",
    "reactivex>=4.0.4",
    "pyrsistent>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
]

[project.scripts]
start = "mgl_imgui_framework.__main__:main"

[tool.autopep8]
max_line_length = 80
aggressive = 3
